--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-  <title>Fruits App</title>
+  <link rel="stylesheet" href="/css/style.css" />
+  <title>Games archive</title>
 </head>
 
 <body>
-  <h1>Welcome to the Games archive!</h1>
+  <h1>Welcome to the Games Archive!</h1>
   <p>An app for managing your favorite games.</p>
-  <a href="/games">Browse Fruits</a>
+  <a href="/games">Browse Games</a>
 </body>
 
 </html>
